fixed logo zoom size on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -180,7 +180,7 @@
   }
   .menuItem {
     width: 320px;
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 }
 
